# lizard

./: .env.example  Makefile  README.md  pyproject.toml
src/lizard/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging_utils.py
src/lizard/game_theory/: __init__.py  payoff.py
src/lizard/learning/: __init__.py  retrain.py
src/lizard/llm/: __init__.py  ollama_client.py
src/lizard/reports/: __init__.py  builder.py
src/lizard/search/: __init__.py  heuristics.py
src/lizard/simula/: __init__.py  agent.py  dhamma.py  engine.py  prompts.py  scenario.py
src/lizard/storage/: __init__.py  db.py  files.py  memory.py
src/lizard/thermodynamics/: __init__.py  entropy.py
src/lizard/world/: __init__.py  technology.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_engine.py  test_game_theory.py  test_search.py  test_storage.py  test_thermodynamics.py
