[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lizard"
version = "0.1.0"
description = "SIMULA Agent — terminal-first, multi-agent life-situation simulator grounded in the Buddha's Eightfold Path."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lizard Authors" }]
requires-python = ">=3.10"
keywords = ["agents", "simulation", "llm", "ollama", "buddha", "dhamma", "game-theory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.7",
    "ollama>=0.3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]

[project.scripts]
lizard = "lizard.cli:main"

[project.urls]
Homepage = "https://github.com/green/lizard"
Repository = "https://github.com/green/lizard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lizard = ["py.typed", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/lizard"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
